--- a/views/layouts/login-layout.ejs
+++ b/views/layouts/login-layout.ejs
@@ -41,14 +41,6 @@
 
 
 
-<section>
-
-  <%- body %>
-
-</section>
-
-
-
 <!--
     Client-side Templates
     ========================
@@ -100,10 +92,18 @@
 
 <!--SCRIPTS-->
 <script src="/js/dependencies/sails.io.js"></script>
+<script src="/js/controllers/UserController.js"></script>
 <script src="/js/utils.js"></script>
 <!--SCRIPTS END-->
 
-<script src="/js/dependencies/sails.io.js" autoConnect="false"></script>
+
+
+
+<section>
+
+  <%- body %>
+
+</section>
 
 </body>
 </html>
