--- a/views/templates/form/top.ejs
+++ b/views/templates/form/top.ejs
@@ -1,10 +1,12 @@
 <header class="w3-col s12 ">
   <h2>
     <%
-    if(typeof editUser === "object")
+    if(typeof item === "object")
     {
       %>
-    Editando usuario<%
+    Editando usuario
+
+    <%
     }
     else
     {
