--- a/views/templates/listado/cuerpo.ejs
+++ b/views/templates/listado/cuerpo.ejs
@@ -3,7 +3,7 @@
   * Template de listado
   * */
 %>
-<div data-ng-controller="<%= items[0].type%>Controller" class="w3-col s12 listado">
+<div data-ng-controller="listController" class="w3-col s12 listado">
   <% for(var k in items)
   {
     var item=items[k];
@@ -34,7 +34,7 @@
 
       <a  title="<%= __("eliminar") %>" class="delete"
 
-          data-ng-click="showModal('<%- __('usuarios.deletePrompt') %>','<%- __( "usuarios.areYouSure",item) %>','delete<%= item.type %>(\'<%= item.id %>\')')"
+          data-ng-click="showModal('<%- __('usuarios.deletePrompt') %>','<%- __( "usuarios.areYouSure",item) %>','delete(\'<%= item.id %>\',\'<%= item.type %>)')"
 
       >
         <i class="material-icons">&#xE872;</i>
