--- a/views/templates/listado/top.ejs
+++ b/views/templates/listado/top.ejs
@@ -1,5 +1,6 @@
 <header class="w3-col s12">
 
-  <% var type= __("models." + items[0].type+".plural")  %>
+  <%
+  var type= __("models." + model+".plural")  %>
   <h2><%= __("listado.top",type) %></h2>
 </header>
