--- a/views/transmisiones/cuerpo.ejs
+++ b/views/transmisiones/cuerpo.ejs
@@ -1,6 +1,8 @@
 <div class="main-container">
 
-  <% if(typeof top === "string")
+  <%
+
+  if(typeof top === "string")
   {%>
 
   <%- partial(top) %>
