--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,6 +30,7 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/select.css">
     <!--STYLES END-->
   </head>
 
@@ -91,6 +92,7 @@
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/controllers/ListController.js"></script>
     <script src="/js/controllers/SaveController.js"></script>
+    <script src="/js/select-tpls.min.js"></script>
     <script src="/js/utils.js"></script>
     <!--SCRIPTS END-->
   </body>
