--- a/views/layouts/admin-layout.ejs
+++ b/views/layouts/admin-layout.ejs
@@ -32,6 +32,7 @@
 
   <!--STYLES-->
   <link rel="stylesheet" href="/styles/importer.css">
+  <link rel="stylesheet" href="/styles/select.css">
   <!--STYLES END-->
 
   <script
@@ -43,7 +44,7 @@
 
   <script>
 
-    var app = angular.module('app', [ "isteven-multi-select" ]);
+    var app = angular.module('app', [ "isteven-multi-select",'oi.select' ]);
   </script>
 </head>
 
@@ -106,6 +107,7 @@
 <script src="/js/dependencies/sails.io.js"></script>
 <script src="/js/controllers/ListController.js"></script>
 <script src="/js/controllers/SaveController.js"></script>
+<script src="/js/select-tpls.min.js"></script>
 <script src="/js/utils.js"></script>
 <!--SCRIPTS END-->
 
