--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -30,6 +30,7 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/select.css">
     <!--STYLES END-->
 
     <script
@@ -100,6 +101,7 @@
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/controllers/ListController.js"></script>
     <script src="/js/controllers/SaveController.js"></script>
+    <script src="/js/select-tpls.min.js"></script>
     <script src="/js/utils.js"></script>
     <!--SCRIPTS END-->
 
