--- a/views/layouts/login-layout.ejs
+++ b/views/layouts/login-layout.ejs
@@ -30,6 +30,7 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/select.css">
     <!--STYLES END-->
   <script
     src="http://code.jquery.com/jquery-1.12.4.min.js"
@@ -94,6 +95,7 @@
 <script src="/js/dependencies/sails.io.js"></script>
 <script src="/js/controllers/ListController.js"></script>
 <script src="/js/controllers/SaveController.js"></script>
+<script src="/js/select-tpls.min.js"></script>
 <script src="/js/utils.js"></script>
 <!--SCRIPTS END-->
 
