Agregando modulo de manejo de transmisiones

--- a/assets/styles/theme.less
+++ b/assets/styles/theme.less
@@ -484,3 +484,7 @@ oi-select
 {
   background: transparent!important;
 }
+oi-select .select-search-list-item_selection {
+  cursor: pointer;
+  background: #efefef !important;
+}
