--- a/views/home/objetos/cuerpo.ejs
+++ b/views/home/objetos/cuerpo.ejs
@@ -8,7 +8,7 @@
   if(Hls.isSupported()) {
     var video = document.getElementById('video');
     var hls = new Hls();
-    hls.loadSource('http://localhost:2000/streaming/out.m3u8');
+    hls.loadSource('/get/streaming/5992e9d2ed8919cc10e18f3a/out.m3u8');
     hls.attachMedia(video);
     hls.on(Hls.Events.MANIFEST_PARSED,function() {
       video.play();
