Agregando modulo de manejo de transmisiones

--- a/assets/styles/theme.less
+++ b/assets/styles/theme.less
@@ -13,10 +13,16 @@
 @color6:rgba(0, 0, 0, 0.49);
 
 @fontSize1:20px;
+@fontSize2:25px;
+
 @font1: 'Roboto', sans-serif;
 @margin1:10px;
 @padding2:5px;
 @padding1:10px;
+i
+{
+  font-size: @fontSize2!important;
+}
  input,select
  {
    border-right: 0!important;;
@@ -339,7 +345,7 @@ body > header nav > .wrapper
   }
   body > header nav
   {
-    top: 55px;
+    top: 45px;
     position: fixed;
     height: 100%;
     width: 65%;
