--- a/views/comun/admin-navbar.ejs
+++ b/views/comun/admin-navbar.ejs
@@ -1,6 +1,5 @@
 <div class="mobile-bar">
-<span class="hamburger">
-  <i class="material-icons">&#xE3C7;</i>
+<span class="hamburger"><i class="material-icons">dehaze</i>
 </span>
 </div>
 <nav>
