--- a/views/home/cuerpo.ejs
+++ b/views/home/cuerpo.ejs
@@ -1,8 +1,8 @@
 
 <div class="main-container">
-
   <%- partial("objetos/header.ejs") %>
 
-  <%- partial("objetos/cuerpo.ejs")%>
+  <%- partial("objetos/streaming.ejs")%>
 
+  <%- partial("objetos/no-streaming.ejs")%>
 </div>
