--- a/views/home/objetos/streaming.ejs
+++ b/views/home/objetos/streaming.ejs
@@ -1,3 +1,6 @@
+<% if(streaming)
+{
+%>
 
 <div class="video-container w3-col s12  ">
 
@@ -8,7 +11,7 @@
   if(Hls.isSupported()) {
     var video = document.getElementById('video');
     var hls = new Hls();
-    hls.loadSource('/get/streaming/5992e9d2ed8919cc10e18f3a/out.m3u8');
+    hls.loadSource('/get/streaming/<%= streaming %>/out.m3u8');
     hls.attachMedia(video);
     hls.on(Hls.Events.MANIFEST_PARSED,function() {
       video.play();
@@ -19,3 +22,4 @@
     alert("cant play hls");
   }
 </script>
+<%}%>
