--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -40,6 +40,10 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <script>
+
+      var app = angular.module('app', []);
+    </script>
   </head>
 
   <body data-ng-app="app" id="app" class="<%= bodyClasses.join(' ') %>" >
