--- a/views/comun/navbar.ejs
+++ b/views/comun/navbar.ejs
@@ -3,7 +3,7 @@
 
 <div class="mobile-bar">
 <span class="hamburger">
-  <i class="material-icons">&#xE3C7;</i>
+  <i class="material-icons">dehaze</i>
 </span>
 </div>
 <nav>
