Agregando modulo de manejo de transmisiones

--- a/views/comun/admin-navbar.ejs
+++ b/views/comun/admin-navbar.ejs
@@ -1,5 +1,6 @@
 <div class="mobile-bar">
-<span class="hamburger"><i class="material-icons">dehaze</i>
+<span class="hamburger">
+  <i class="material-icons">dehaze</i>
 </span>
 </div>
 <nav>
