--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,6 +30,7 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/ng-animation.css">
     <link rel="stylesheet" href="/styles/select.css">
     <!--STYLES END-->
   </head>
