--- a/views/layouts/admin-layout.ejs
+++ b/views/layouts/admin-layout.ejs
@@ -32,6 +32,7 @@
 
   <!--STYLES-->
   <link rel="stylesheet" href="/styles/importer.css">
+  <link rel="stylesheet" href="/styles/ng-animation.css">
   <link rel="stylesheet" href="/styles/select.css">
   <!--STYLES END-->
 
@@ -41,10 +42,10 @@
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-multi-select/4.0.0/isteven-multi-select.min.js"></script>
-
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular-animate.js"></script>
   <script>
 
-    var app = angular.module('app', [ "isteven-multi-select",'oi.select' ]);
+    var app = angular.module('app', [ "isteven-multi-select",'oi.select','ngAnimate' ]);
   </script>
 </head>
 
@@ -120,9 +121,22 @@
   <%- body %>
 </section>
 
+<footer>
+
+  <%- partial('../templates/chat/cuerpo.ejs') %>
+</footer>
+
 <%- partial('../modal/cuerpo.ejs') %>
 
+<script>
 
+
+
+  io.socket.get('/user')
+
+  io.socket.get('/online/users')
+
+</script>
 
 
 </body >
