--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -31,6 +31,7 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/ng-animation.css">
     <link rel="stylesheet" href="/styles/select.css">
     <!--STYLES END-->
 
