--- a/assets/styles/theme.less
+++ b/assets/styles/theme.less
@@ -511,7 +511,7 @@ oi-select .select-search-list-item_selection {
   margin: 0px!important;
   font-size: 20px!important;
 }
-.chat li:first-child
+.chat .header
 {
   padding: 10px;
 
@@ -674,4 +674,14 @@ oi-select .select-search-list-item_selection {
   position: relative;
   right: 10px;
   top: 3px;
+}
+.chat .msg-badge
+{
+  float: right;
+  background: @color7;
+  padding: 5px;
+  font-size: 20px!important;
+  position: relative;
+  top: 3px;
+  color: white;
 }
